--- a/.github/ISSUE_TEMPLATE/issue.yml
+++ b/.github/ISSUE_TEMPLATE/issue.yml
@@ -28,6 +28,23 @@ body:
         - Beta
     validations:
       required: true
+  - type: checkboxes
+    id: latest
+    attributes:
+      label: Latest Version
+      description: Are you using the latest version from this repository?
+      options:
+        - label: "Yes"
+        - label: "No, I have specified the version in the Issue description."
+  - type: input
+    id: latest
+    attributes:
+      label: Are you using the latest version?
+      description: Please check the latest version of the blueprint in this repository
+      placeholder: "Yes"
+      value: "Something unexpected happened"
+    validations:
+      required: true
   - type: textarea
     id: automation
     attributes:
