--- a/.github/ISSUE_TEMPLATE/issue.yml
+++ b/.github/ISSUE_TEMPLATE/issue.yml
@@ -36,6 +36,8 @@ body:
       options:
         - label: "Yes"
         - label: "No, I have specified the version in the Issue description."
+    validations:
+      required: true
   - type: textarea
     id: automation
     attributes:
