--- a/.github/ISSUE_TEMPLATE/issue.yml
+++ b/.github/ISSUE_TEMPLATE/issue.yml
@@ -28,7 +28,7 @@ body:
   - type: textarea
     id: automation
     attributes:
-      label: Automation config
+      label: Automation Config
       description: Please copy and paste your automation config from Home Assistant. This will be automatically formatted into code, so no need for backticks.
       render: yaml
     validations:
