--- a/.github/ISSUE_TEMPLATE/issue.yml
+++ b/.github/ISSUE_TEMPLATE/issue.yml
@@ -34,6 +34,14 @@ body:
     validations:
       required: true
   - type: textarea
+    id: frigate
+    attributes:
+      label: Frigate Config
+      description: Please paste the frigate configuration.
+      render: yaml
+    validations:
+      required: true
+  - type: textarea
     id: log
     attributes:
       label: Other relevant log
