--- a/.github/ISSUE_TEMPLATE/config_support.yml
+++ b/.github/ISSUE_TEMPLATE/config_support.yml
@@ -20,8 +20,8 @@ body:
   - type: textarea
     id: config
     attributes:
-      label: Automation config file
-      description: This will be automatically formatted into code, so no need for backticks.
+      label: Automation config
+      description: Select Edit in YAML when viewing your automation to copy it. This will be automatically formatted into code, so no need for backticks.
       render: yaml
     validations:
       required: true
