--- a/Frigate_Camera_Notifications/Beta.yaml
+++ b/Frigate_Camera_Notifications/Beta.yaml
@@ -1,5 +1,8 @@
 blueprint:
   name: Frigate Notifications (0.12.0.4d)
+  author: SgtBatten
+  homeassistant:
+    min_version: 2024.6.0
   description: |
     ## Frigate Notifications
 
@@ -8,7 +11,7 @@ blueprint:
     With this blueprint, you may send the notification to multiple devices by leaving "Device" blank and instead use a [notification group][1].
 
     ### Software Version Requirements
-      - Minimum Home Assistant Version: 2022.2
+      - Minimum Home Assistant Version: 2024.6
       - Minimum Frigate Version: 0.11.0
       - Minimum Frigate Integration Version: 3.0.0
         - **Note:** "Enable the unauthenticated notification event proxy" must be ticked during setup
