--- a/Frigate_Camera_Notifications/Stable.yaml
+++ b/Frigate_Camera_Notifications/Stable.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: Frigate Notifications (0.12.0.4b)
+  name: Frigate Notifications (0.12.0.4c)
   author: SgtBatten
   homeassistant:
     min_version: 2024.6.0
@@ -511,7 +511,7 @@ blueprint:
             number:
               max: 3600
               min: 0
-              unit_of_measurement: minutes
+              unit_of_measurement: seconds
         initial_delay:
           name: Delay initial notification (Optional)
           description: |
