--- a/Frigate_Camera_Notifications/Beta.yaml
+++ b/Frigate_Camera_Notifications/Beta.yaml
@@ -363,6 +363,12 @@ blueprint:
       icon: mdi:filter
       collapsed: true
       input:
+        condition_global:
+          name: Add Condition(s) to run this Automation
+          description: Add conditions if needed to run this automation at all. If conditions return `false`, no actions will fire.
+          default: []
+          selector:
+            condition: {}
         zone_filter:
           name: Zone Filter on/off (Optional)
           description: Enable to only notify if an object has entered a zone listed below.
@@ -870,7 +876,11 @@ variables:
   tv_transparency: !input tv_transparency
   tv_interrupt: !input tv_interrupt
   debug: !input debug
+  condition_global: !input condition_global
 action:
+- if:
+  - condition: !input condition_global
+  then:
   - choose:
       - alias: "Silence New Object Notifications"
         conditions:
