--- a/Frigate_Camera_Notifications/Stable.yaml
+++ b/Frigate_Camera_Notifications/Stable.yaml
@@ -883,7 +883,7 @@ action:
               label: "{{ object | title }}"
               # Dynamic Variables per event
               #initial_home: "{{ presence_entity != '' and is_state(presence_entity, 'home') }}"
-              initial_home: "{{presence_entity |reject('') |select('is_state', 'home') |list |length == 0 }}"
+              initial_home: "{{presence_entity |reject |select('is_state', 'home') |list |length == 0 }}"
               enteredzones: "{{ trigger.payload_json['after']['entered_zones']}}"
               zone_multi_filter: "{{zone_only and zone_multi and enteredzones|length and zones and zones |reject('in', enteredzones) |list |length == 0 }}"
               loitering: false
@@ -1171,9 +1171,9 @@ action:
                     loitering: "{{ loiter_timer and event['before']['motionless_count']/fps/60 < loiter_timer and event['after']['motionless_count']/fps/60 >= loiter_timer }}"
                     new_snapshot: "{{ update_thumbnail and event['before']['snapshot']['frame_time'] != event['after']['snapshot']['frame_time'] }}"
                     #home: "{{ presence_entity != '' and is_state(presence_entity, 'home') }}"
-                    home: "{{presence_entity |reject('') |select('is_state', 'home') |list |length == 0 }}"
+                    home: "{{presence_entity |reject |select('is_state', 'home') |list |length == 0 }}"
                     #presence_changed: "{{ presence_entity != '' and as_datetime(event['before']['frame_time']) < states[presence_entity].last_changed }}"
-                    presence_changed: "{{presence_entity |reject('') |select('is_state', 'last_changed', 'greaterthan', as_datetime(event['before']['frame_time'])) |list |length != 0 }}"
+                    presence_changed: "{{presence_entity |reject |select('is_state', 'last_changed', 'greaterthan', as_datetime(event['before']['frame_time'])) |list |length != 0 }}"
                     last_zones: "{{ event['before']['entered_zones']|lower}}"
                     enteredzones: "{{ event['after']['entered_zones']|lower}}"
                     zone_filter: "{{ not zone_only or zones|select('in', enteredzones)|list|length > 0 }}"
