--- a/Frigate_Camera_Notifications/Beta.yaml
+++ b/Frigate_Camera_Notifications/Beta.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: Frigate Notifications (0.12.0.4g)
+  name: Frigate Notifications (0.12.0.4h)
   author: SgtBatten
   homeassistant:
     min_version: 2024.6.0
@@ -1085,7 +1085,6 @@ action:
                               url: "{{tap_action}}"
                               attachment:
                                 url: "{{base_url}}/api/frigate{{client_id}}/notifications/{{id}}/{{attachment}}"
-                                lazy: true
                               push:
                                 sound:
                                   name: "{{sound}}"
@@ -1140,7 +1139,6 @@ action:
                                 url: "{{tap_action}}"
                                 attachment:
                                   url: "{{base_url}}/api/frigate{{client_id}}/notifications/{{id}}/{{attachment}}"
-                                  lazy: true
                                 push:
                                   sound:
                                     name: "{{sound}}"
@@ -1193,7 +1191,6 @@ action:
                             url: "{{tap_action}}"
                             attachment:
                               url: "{{base_url}}/api/frigate{{client_id}}/notifications/{{id}}/{{attachment}}"
-                              lazy: true
                             push:
                               sound:
                                 name: "{{sound}}"
@@ -1427,7 +1424,6 @@ action:
                                     url: "{{tap_action}}"
                                     attachment:
                                       url: "{{base_url}}/api/frigate{{client_id}}/notifications/{{id}}/{{camera + '/clip.mp4' if video|length>0 and wait.trigger.payload_json['type'] == 'end' else attachment }}"
-                                      lazy: true
                                     push:
                                       sound:
                                         name: "{{ iif(update, 'none', sound) }}"
@@ -1472,7 +1468,6 @@ action:
                                       # Android/Fire TV
                                       image:
                                         url: "{{base_url}}/api/frigate{{client_id}}/notifications/{{id}}/snapshot.jpg"
-                                        lazy: true
                                       video: "{{video}}"
                                       fontsize: "{{tv_size}}"
                                       position: "{{tv_position}}"
@@ -1485,7 +1480,6 @@ action:
                                       url: "{{tap_action}}"
                                       attachment:
                                         url: "{{base_url}}/api/frigate{{client_id}}/notifications/{{id}}/{{camera + '/clip.mp4' if video|length>0 and wait.trigger.payload_json['type'] == 'end' else attachment }}"
-                                        lazy: true
                                       push:
                                         sound:
                                           name: "{{ iif(update, 'none', sound) }}"
@@ -1539,7 +1533,6 @@ action:
                                   url: "{{tap_action}}"
                                   attachment:
                                     url: "{{base_url}}/api/frigate{{client_id}}/notifications/{{id}}/{{camera + '/clip.mp4' if video|length>0 and wait.trigger.payload_json['type'] == 'end' else attachment }}"
-                                    lazy: true
                                   push:
                                     sound:
                                       name: "{{ iif(update, 'none', sound) }}"
